# ThirdTask

./: .gitignore  CMakeLists.txt  LinuxSystemResourceHelper.cpp  LinuxSystemResourceHelper.h  SystemResourceHelper.cpp  SystemResourceHelper.h  WindowsSystemResourceHelper.cpp  WindowsSystemResourceHelper.h  main.cpp
